# promptpack-python

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
docs/: README.md  astro.config.mjs  check-links.js  package.json
docs/public/: mermaid-init.js
docs/src/content/docs/: index.mdx
docs/src/content/docs/api/: index.md
docs/src/content/docs/contributors/: index.md
docs/src/content/docs/examples/: basic-usage.md  index.md  tools.md  validation.md
docs/src/content/docs/getting-started/: installation.md  quickstart.md
docs/src/styles/: custom.css
examples/: README.md  basic_usage.py  tools_example.py  validation_example.py
examples/packs/: customer-support.json  sales-assistant.json
