# Copyright 2025 Altaira Labs
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptpack-python"
version = "0.1.0"
description = "Python libraries for parsing and using PromptPacks"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Altaira Labs", email = "dev@altairalabs.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:packages}"
test-cov = "pytest --cov=packages --cov-report=term-missing {args:packages}"
lint = "ruff check packages"
format = "ruff format packages"
typecheck = "mypy packages"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Disable errors that come from LangChain's complex type definitions
disable_error_code = ["arg-type"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
